--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - The &lt;model-viewer&gt; web component</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@latest/dist/compressed/luxa.css'><link rel="stylesheet" href="style.css">
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@latest/dist/compressed/luxa.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
       <div class="lx-row">
         <div class="lx-card bs-lg">
           <model-viewer src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948" ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878" poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717" alt="A 3D model of an astronaut!" shadow-intensity="1" camera-controls="true" auto-rotate="true" ar="true"></model-viewer>
-          <p class="text" style="color: white;"><i ></i> i love bick dicks in my mouse &lt;model-viewer&gt; </p>
+          <p class="text" style="color: white;"><i ></i> i love bick dicks in my mouse yessss&lt;model-viewer&gt; </p>
         </div>
       </div>
     </div>
