--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="lx-row">
         <div class="lx-card bs-lg">
           <model-viewer src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948" ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878" poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717" alt="A 3D model of an astronaut!" shadow-intensity="1" camera-controls="true" auto-rotate="true" ar="true"></model-viewer>
-          <p class="text" style="color: #ffffff;"><i ></i> i love bick dicks in my mouse yessss&lt;model-viewer&gt; </p>
+          <p class="text" style="color: #ffffff;"> i love bick dicks in my mouse yessss&lt;model-viewer&gt; </p>
         </div>
       </div>
     </div>
