--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="lx-container-80">
       <div class="lx-row">
         <div class="lx-card bs-lg">
-          <model-viewer src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948" ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878" poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717" alt="A 3D model of an astronaut!" shadow-intensity="1" camera-controls="true" auto-rotate="true" ar="true"></model-viewer>
+          <model-viewer src="https://c0b535ed7astg.blob.core.windows.net/asset-ingested/1838135417-WALMART-ARCADE_ARCADE1UP-YELLOW_ar-1694624439588.glb" ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878" poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717" alt="A 3D model of an astronaut!" shadow-intensity="1" camera-controls="true" auto-rotate="true" ar="true"></model-viewer>
           <p class="text" style="color: #ffffff;">i love bick dicks in my mouse yes&lt;model-viewer&gt; </p>
         </div>
       </div>
